RESOLVED FIXED159901
DocType's publicId / systemId should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=159901
Summary DocType's publicId / systemId should not be nullable
Chris Dumez
Reported 2016-07-18 15:14:07 PDT
DocType's publicId / systemId should not be nullable. While they are not marked as nullable in our IDL, they can be stored as null Strings in our implementation. This leads to subtle bugs.
Attachments
Patch (7.76 KB, patch)
2016-07-18 15:33 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-07-18 15:33:03 PDT
Benjamin Poulain
Comment 2 2016-07-18 17:36:37 PDT
Comment on attachment 283946 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=283946&action=review String sucks when it can't be null by design :( > Source/WebCore/ChangeLog:17 > + Serialization would DocumentType nodes would also be wrong when "Serialization would DocumentType nodes would"
WebKit Commit Bot
Comment 3 2016-07-18 17:58:13 PDT
Comment on attachment 283946 [details] Patch Clearing flags on attachment: 283946 Committed r203389: <http://trac.webkit.org/changeset/203389>
WebKit Commit Bot
Comment 4 2016-07-18 17:58:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.