Source/WebCore/dom/DocumentType.cpp
@@ -31,8 +31,8 @@ namespace WebCore {
 DocumentType::DocumentType(Document& document, const String& name, const String& publicId, const String& systemId)
     : Node(document, CreateOther)
     , m_name(name)
-    , m_publicId(publicId)
-    , m_systemId(systemId)
+    , m_publicId(publicId.isNull() ? emptyString() : publicId)
+    , m_systemId(systemId.isNull() ? emptyString() : systemId)
 {
 }
 
